# pilot_academy

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: config.yaml
config/dataset/: all_towns_with_weather.yaml
config/experiment/: lr_sweep_001.yaml
config/model/: pilotnet-sf-bc-steer.yaml  vit-sf-navbc-steer.yaml
config/train/: pilotnet_baseline.yaml
docs/: readme.md
notebooks/: evaluation.ipynb  sampling.ipynb  template.ipynb
scripts/: make_split.py  run_pilotnet_training.py
src/pilot_academy/: train_pilotnet.py  train_pilotnet_with_resume.py
src/pilot_academy/models/: pilotnet.py  registry.py  vit_sf_navbc_steer.py
src/pilot_academy/training/: RESUME_TRAINING_GUIDE.md  callbacks.py  factory.py  optimizers.py  resume_utils.py  spec.py
tests/: test_build_datasets.py  test_image_caching.py  test_pilotnet.py  test_tfdata_train.py  test_tfdata_val.py  test_traing.py
